Trying to fix sticky button issue on safari OF COURSE

--- a/src/App.css
+++ b/src/App.css
@@ -314,6 +314,7 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
     /* Film search list section end */
 
     /* Film info section start */
+
       .movieInfo {
         background: rgba(40, 48, 68, 0.851);
         position: fixed;
@@ -359,7 +360,9 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
         bottom: 0;
         height: 50px;
         position: sticky;
+        position: -webkit-sticky;
         width: 100%;
+        z-index: 10;
       }
 
     /* Film info section end */
